--- a/ckanext/publicamundi/templates/user/dashboard_resources.html
+++ b/ckanext/publicamundi/templates/user/dashboard_resources.html
@@ -4,6 +4,7 @@
   <div class="dashboard-resources">
     <h2 class="hide-heading">{{ _('My Resources') }}</h2>
     {# { % if c.user_dict.datasets %} #}
+  {% snippet 'user/snippets/filter_bar.html', package=package, item_class=item_class, hide_resources=hide_resources, banner=banner, truncate=truncate, truncate_title=truncate_title, parent=parent %}
     {% if c.page.items %}
     {% snippet 'user/snippets/package_list.html', packages=c.page.items, parent='dashboard' %}
     {{ c.page.pager() }}
