--- a/ckanext/publicamundi/templates/user/snippets/package_item.html
+++ b/ckanext/publicamundi/templates/user/snippets/package_item.html
@@ -7,9 +7,13 @@
 {% block package_item_resources %}
   <ul class="resources unstyled">
   {% for resource in package.resources %}
-  {% with task_result = h.resource_ingestion_result(resource.id) %}
-  {% snippet 'user/snippets/resource_item.html', pkg=package, res=resource, task=task_result, parent=parent %}
-  {% endwith %} {# task_result #}
+    {% if resource.vectorstorer_resource or resource.rasterstorer_resource %}
+        {% with task_result = h.resource_ingestion_result(resource.id) %}
+            {% snippet 'user/snippets/resource_item_ingested.html', pkg=package, res=resource, task=task_result, parent=parent %}
+        {% endwith %} {# task_result #}
+    {% else %}
+        {% snippet 'user/snippets/resource_item.html', pkg=package, res=resource,  parent=parent %}
+    {% endif %}
   {% endfor %} {# resource #}
   </ul>
 {% endblock %}
