--- a/ckanext/publicamundi/templates/user/snippets/filter_bar.html
+++ b/ckanext/publicamundi/templates/user/snippets/filter_bar.html
@@ -36,7 +36,7 @@
     </a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
         <li>
-        <a href="{{ h.remove_url_param('storer_type') }}"><span></span> {{_('All types')}}</a>
+        <a href="{{ h.remove_url_param('storer_type') }}"> {% trans %}<span class="all-types"></span>All{% endtrans %}</a>
         </li>
 
         {% for storer_type_key, storer_type_name in sorting_storer_types.iteritems() %}
@@ -58,7 +58,7 @@
     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
         <li>
             <a href="{{ h.remove_url_param('status') }}">
-                <span class="label" data-resource-status="all" title="Remove">&nbsp;&nbsp;&nbsp;</span> {{_('All statuses')}}</a>
+                <span class="label" data-resource-status="all" title="Remove">&nbsp;&nbsp;&nbsp;</span> {% trans %}<span class="all-statuses"></span>All{% endtrans %}</a>
         </li>
       {% for status_key, status_name in sorting_statuses.iteritems() %}
         <li>
@@ -79,12 +79,12 @@
     {% set status = h.get_request_param('status') %}
         {{_('Type')}}:  
     <span class="filtered pill label"> 
-        {% if storer_type in sorting_storer_types.keys() %} {{ sorting_storer_types[storer_type] }} {% else %}{{_('All types')}} {% endif %}
+        {% if storer_type in sorting_storer_types.keys() %} {{ sorting_storer_types[storer_type] }} {% else %} {% trans %}<span class="all-types"></span>All{% endtrans %} {% endif %}
     </span>
 
     {{_('Status')}}: 
     <span class="filtered pill label"  {% if status in sorting_statuses.keys() %}data-resource-status="{{status}}"{% endif %} > 
-        {% if status in sorting_statuses.keys() %} {{ sorting_statuses[status] }} {% else %}{{_('All statuses')}} {% endif %}
+        {% if status in sorting_statuses.keys() %} {{ sorting_statuses[status] }} {% else %} {% trans %}<span class="all-statuses"></span>All{% endtrans %} {% endif %}
     </span>
     {% endblock %}
 </div> {# filter-list #}
