--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -8,7 +8,7 @@
 
     {% for raster_res in raster_resources %}
         {% if raster_res.format == 'wms' %}
-        <div class="action-button"><a class="btn" href={{ h.get_maps_url(id=raster_res.id)}} >
+        <div class="action-button"><a class="btn" href={{ h.get_maps_url(package_id=pkg.id, resource_id=raster_res.id)}} >
                     <i class="icon-medium icon-globe"></i>{{ _(' Map')}}
                 </a>
         </div>
@@ -17,7 +17,7 @@
 
     {% for vector_res in  vector_resources %}
         {% if vector_res.format == 'wms' %}
-        <div class="action-button"><a class="btn" href={{ h.get_maps_url(id=vector_res.id)}} >
+        <div class="action-button"><a class="btn" href={{ h.get_maps_url(package_id=pkg.id, resource_id=vector_res.id)}} >
                     <i class="icon-medium icon-globe"></i>{{ _(' Map')}}
                 </a>
         </div>
