Fix organization display-url in templates

--- a/ckanext/publicamundi/templates/snippets/organization.html
+++ b/ckanext/publicamundi/templates/snippets/organization.html
@@ -16,7 +16,7 @@ Example:
     <section class="module-content">
       <div class="image">
         <a href="{{ url }}">
-          <img src="{{ organization.image_url or h.url_for_static('/base/images/placeholder-organization.png') }}" width="200" alt="{{ organization.name }}" />
+          <img src="{{ organization.image_display_url or h.url_for_static('/base/images/placeholder-organization.png') }}" width="200" alt="{{ organization.name }}" />
         </a>
       </div>
       <h1 class="heading">{{ organization.title or organization.name }}</h1>
