--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -5,7 +5,7 @@
 {% block package_metadata_fields_url %}
 {# Note: 
    The following is not really needed since we give the user the option to import
-   an allready existing metadata file (in a dedicated form)
+   an already existing metadata file (in a dedicated form)
 #}
 {#
 {{ 
