--- a/ckanext/publicamundi/templates/snippets/dialogs/import-metadata.html
+++ b/ckanext/publicamundi/templates/snippets/dialogs/import-metadata.html
@@ -17,7 +17,7 @@
 
         <div class="import-step">
             <p>Create a new dataset by importing an existing <strong>XML</strong> metadata file.</p>
-            <p>You can either upload a local file from your computer, or use a link (in case metadata is allready published somewhere).</p>
+            <p>You can either upload a local file from your computer, or use a link (in case metadata is already published somewhere).</p>
             {% with action = h.url_for(
                 controller='ckanext.publicamundi.controllers.files:Controller', action='upload_file', object_type='source-metadata') 
             %} 
