resized carousel images and added footer link(issue #105 on PublicaMundi/labs.geodata.gov.gr

--- a/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
@@ -8,7 +8,7 @@
              {'name':'urban-rural-regions',
              'display_name': _('Urban & rural regions')
              },
-             {'name':'railway-network-5',
+             {'name':'railway-network',
              'display_name': _('Railway network')
              },
 
