--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -28,11 +28,7 @@
         <div class="quarter footer-links">
             <ul class="unstyled">
             {% block footer_links_ckan %}
-              {% set api_url = 'http://docs.ckan.org/en/{0}/api.html'.format(g.ckan_doc_version) %}
-              {#<li><a href="{{ api_url }}">{{ _('CKAN API') }}</a></li>
-              <li><a href="http://www.okfn.org/">{{ _('Open Knowledge Foundation') }}</a></li>
-              <li><a href="http://www.opendefinition.org/okd/"><img src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png"></a></li> #}
-                {% snippet 'snippets/main_menu.html' %}                            
+              {% snippet 'snippets/main_menu.html' %}                            
                 {% endblock %}
             </ul>
         </div>
@@ -51,19 +47,17 @@
         <div class="quarter footer-links">
             <ul class="unstyled">
             <li><a href="http://www.publicamundi.eu">PublicaMundi</a></li>
-            <li><a href="https://github.com/PublicaMundi">Github</a></li>
             <li><a href="https://twitter.com/geodatagovgr">Twitter</a></li>
+            <li><a href="https://github.com/PublicaMundi/geodata.gov.gr">Github</a></li>
+            <li><a href="https://github.com/PublicaMundi/geodata.gov.gr/issues/new">{{_('Report issue') }}</a></li>
             </ul>
         </div>   
       
-
           {% block footer_attribution %}
-        {#<p>{% trans %}{{ _('Powered by')}} <a class="hide-text ckan-footer-logo" href="http://ckan.org">CKAN</a>{% endtrans %}</p> #}
         {% endblock %}
               
-  </div>
-    
-       {% endblock %}
+    </div>
+    {% endblock %}
   </div>
 
   {% block footer_debug %}
