--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -146,6 +146,9 @@
                     'fields': ['lineage'],
                 },
                 {
+                    'fields': ['reference_system'],
+                },
+                {
                     'fields': ['spatial_resolution'],
                 }
             ]
