added homepage image preloading and font-switch for linux

--- a/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/snippets/carousel.html
@@ -13,6 +13,11 @@
              },
 
              ] %}
+
+{# Image preloading #}
+{% for slide in slides %}
+    <img class="hidden" width="1" height="1" src='/images/slides/{{slide.name}}.png'></img> 
+{% endfor %}
 <div id="carousel-homepage" class="carousel slide" data-interval="6000" >
 {% snippet 'home/snippets/promoted_new.html' %}
     <!-- Indicators -->
