re-organized sample XMLs and relevant tests and fixed some issues found

--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -1243,6 +1243,9 @@ p a{
     position:relative;
     float: right;
 }
+.download-links .btn-group{
+    float:right;
+}
 .metadata-label{
     display: block;
     padding: 8px 5px 6px 5px;
