Update read views (widgets) for fields: reference_system, free_keywords
This is relevant to issues: #108, #137

--- a/ckanext/publicamundi/templates/package/snippets/objects/read-temporal_extent-td.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-temporal_extent-td.html
@@ -1,5 +1,5 @@
 <span class="{{ classes|join(' ') }}">
-    {#- Todo Format dates with respect to lacale -#}
+    {#- Todo Format dates with respect to locale -#}
     {% if obj.start and obj.end -%}
     {{- _('From %(start)s to %(end)s')|format(start=obj.start, end=obj.end) -}}
     {% elif obj.start -%}
