--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -341,6 +341,19 @@ h1 > .label.package-state {
 .label.state-invalid { }
 
 /*
+ * Package rating
+ */
+.package-rating{
+    float: right;
+}
+.package-rating i{
+    color: #4E59A4;
+}
+.rating-count{
+    margin-left: 14px;
+}
+
+/*
  * Resources (Search)
  */
 
