--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -3,12 +3,15 @@
 {# Note: The parent template has aliased c.pkg_dict as pkg #}
 
 {% block package_description %}
+  {% block package_rating %}
+        {% snippet "snippets/rating.html", pkg=pkg, num_ratings=c.num_ratings, current_rating=c.current_rating, user=c.user  %}
+    {% endblock %}
+
   {{ super() }}
-{% endblock %}
+  {% endblock %}
 
 {% block page_heading %}
   {{ pkg.title or pkg.name }}
-
   {% if pkg.get('state', '').startswith('draft') %}
   <span class="label package-state label-info state-draft">{{ _('Draft') }}</span>
   {% elif pkg.get('state', '').startswith('deleted') %}
@@ -16,6 +19,7 @@
   {% elif pkg.get('state', '').startswith('invalid') %}
   <span class="label package-state label-important state-invalid">{{ _('Invalid') }}</span>
   {% endif %} {# state #}
+    
 {% endblock %}
 
 {% block package_notes %}
@@ -48,4 +52,5 @@
 {% block scripts %}
 {{ super() }}
 {% resource 'ckanext-publicamundi/download_options' %}
+{% resource 'ckanext-publicamundi/ratings' %}
 {% endblock %}
