--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -24,14 +24,16 @@
         {% endif %}
         
         {% if vector_res.format == 'wfs' %}
-        {% with tab_res = h.vectorstorer_table_resource(pkg, vector_res) %}
-        {% if tab_res %}
-        <div class="action-button">  
-            <a class="btn" href="{{ h.url_for(controller='package', action='resource_read', id=pkg.name, resource_id=tab_res.id) }}">
-                <i class="icon-table"></i> {{ _('Table') }}</a>
-        </div>
+        {% if h.check_access('sysadmin') %}
+            {% with tab_res = h.vectorstorer_table_resource(pkg, vector_res) %}
+            {% if tab_res %}
+            <div class="action-button">  
+                <a class="btn" href="{{ h.url_for(controller='package', action='resource_read', id=pkg.name, resource_id=tab_res.id) }}">
+                    <i class="icon-table"></i> {{ _('Table') }}</a>
+            </div>
+            {% endif %}
+            {% endwith %}
         {% endif %}
-        {% endwith %}
         {% endif %}
     {% endfor %}
 
