--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -142,7 +142,7 @@
     {% block feedback %}
 
                 <div class="feedback-form">
-                    <a href="{{ h.feedback_form() }}"><button class="btn">{{_('Leave your feedback')}}</button><div class="imis-logo-side"></div></a>
+                    <a href="{{ h.feedback_form() }}"><button class="btn btn-primary">{{_('Leave your feedback')}}</button></a><a href="#"><div class="imis-logo-side"></div></a>
                                     </div>
             {% endblock %}
             {% endblock %}
