star rating enable boolean parameter read from config file: ckanext.publicamundi.package_rating

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -352,7 +352,9 @@ h1 > .label.package-state {
 .rating-count{
     margin-left: 14px;
 }
-
+.package-rating a:hover{
+    text-decoration: none;
+}
 /*
  * Resources (Search)
  */
