--- a/ckanext/publicamundi/templates/package/read.html
+++ b/ckanext/publicamundi/templates/package/read.html
@@ -3,10 +3,11 @@
 {# Note: The parent template has aliased c.pkg_dict as pkg #}
 
 {% block package_description %}
-  {% block package_rating %}
+    {% if h.package_rating_enabled() %}
+    {% block package_rating %}
         {% snippet "snippets/rating.html", pkg=pkg, num_ratings=c.num_ratings, current_rating=c.current_rating, user=c.user  %}
     {% endblock %}
-
+    {% endif %}
   {{ super() }}
   {% endblock %}
 
