--- a/ckanext/publicamundi/themes/geodata/templates/package/group_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/group_list.html
@@ -1,41 +1,37 @@
 {% ckan_extends %}
 
- {% block secondary_content %}
-{# {% block secondary_help_content %}{% endblock %} #}
+{% block secondary_content %}
+    {% if pkg.organization %}
+    {% block package_organization %}
+      {% set org = h.get_organization(pkg.organization.name) %}
+      {% snippet "snippets/organization.html", organization=org , has_context_title=true  %}
+    {% endblock %}
+    {% endif %}
 
-{#  {% block package_info %}
-    {% snippet 'package/snippets/info.html', pkg=pkg %}
-    {% endblock %} #}
-        {% if pkg.organization %}
-  {% block package_organization %}
-      {% snippet "snippets/organization.html", organization=pkg.organization , has_context_title=true  %}
-      {% endblock %}
-      {% endif %}
-
-      {% if pkg.groups %}
+    {% if pkg.groups %}
     {% block package_group %}
-    {% snippet "snippets/group.html", group=pkg.groups %}
+        {% snippet "snippets/group.html", group=pkg.groups %}
     {% endblock %}
     {% endif %}
 
     {% if pkg.tags %}
-  {% block package_side_tags %}
-    {% snippet "package/snippets/tags.html", tags=pkg.tags %}
+    {% block package_side_tags %}
+        {% snippet "package/snippets/tags.html", tags=pkg.tags %}
     {% endblock %}
     {% endif %}
 
 
-  {% block package_license %}
-{% snippet "snippets/license.html", pkg_dict=pkg %}
-{% endblock %}
-{% if pkg.spatial %}
-  {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=pkg.spatial %}
-  {% endif %}
+    {% block package_license %}
+        {% snippet "snippets/license.html", pkg_dict=pkg %}
+    {% endblock %}
+    
+    {% if pkg.spatial %}
+        {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=pkg.spatial %}
+    {% endif %}
 
-{% block package_social %}
-{% snippet "snippets/social.html" %}
-{% endblock %} 
-
+    {% block package_social %}
+        {% snippet "snippets/social.html" %}
+    {% endblock %} 
 {% endblock %}
 
 {% block primary_content_inner %}
