fixed resource read

--- a/ckanext/publicamundi/templates/package/resource_read.html
+++ b/ckanext/publicamundi/templates/package/resource_read.html
@@ -85,7 +85,7 @@
 {% endblock %}
 
 {% block data_preview %}
-    {{ h.preview_resource_or_ingested(pkg, res) }}
+    {{ h.resource_preview(res, pkg) }}
 {% endblock %}
 
 {% block page %}
